fix cloud serialization

--- a/slam3d/sensor/pcl/CMakeLists.txt
+++ b/slam3d/sensor/pcl/CMakeLists.txt
@@ -22,6 +22,7 @@ install(
 	FILES
 		PointCloudSensor.hpp
 		RegistrationParameters.hpp
+		pcl_serialization.hpp
 	DESTINATION include/slam3d/sensor/pcl
 )
 
