--- a/slam3d.project
+++ b/slam3d.project
@@ -111,6 +111,8 @@
   <VirtualDirectory Name="slam3d">
     <File Name="slam3d/CMakeLists.txt"/>
     <VirtualDirectory Name="core">
+      <File Name="slam3d/core/MeasurementRegistry.hpp"/>
+      <File Name="slam3d/core/MeasurementRegistry.cpp"/>
       <File Name="slam3d/core/Clock.hpp"/>
       <File Name="slam3d/core/CMakeLists.txt"/>
       <File Name="slam3d/core/FileLogger.hpp"/>
@@ -148,6 +150,21 @@
       </VirtualDirectory>
     </VirtualDirectory>
     <VirtualDirectory Name="graph">
+      <VirtualDirectory Name="neo4j">
+        <File Name="slam3d/graph/neo4j/slam3d_graph_neo4j.pc.in"/>
+        <File Name="slam3d/graph/neo4j/RedisMap.hpp"/>
+        <File Name="slam3d/graph/neo4j/RedisMap.cpp"/>
+        <File Name="slam3d/graph/neo4j/README.md"/>
+        <File Name="slam3d/graph/neo4j/Neo4jQuery.hpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jQuery.cpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jGraphTest.cpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jGraph.hpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jGraph.cpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jConversion.hpp"/>
+        <File Name="slam3d/graph/neo4j/Neo4jConversion.cpp"/>
+        <File Name="slam3d/graph/neo4j/docker-compose.yml"/>
+        <File Name="slam3d/graph/neo4j/CMakeLists.txt"/>
+      </VirtualDirectory>
       <File Name="slam3d/graph/CMakeLists.txt"/>
       <VirtualDirectory Name="boost">
         <File Name="slam3d/graph/boost/BoostGraph.cpp"/>
