Apply general coding style.

--- a/slam3d.project
+++ b/slam3d.project
@@ -111,6 +111,8 @@
   <VirtualDirectory Name="slam3d">
     <File Name="slam3d/CMakeLists.txt"/>
     <VirtualDirectory Name="core">
+      <File Name="slam3d/core/MeasurementRegistry.hpp"/>
+      <File Name="slam3d/core/MeasurementRegistry.cpp"/>
       <File Name="slam3d/core/Clock.hpp"/>
       <File Name="slam3d/core/CMakeLists.txt"/>
       <File Name="slam3d/core/FileLogger.hpp"/>
