add base class to store measurements

--- a/slam3d/core/CMakeLists.txt
+++ b/slam3d/core/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(core SHARED
 	ScanSensor.cpp
 	Types.cpp
 	MeasurementSerialization.cpp
+	Measurements.cpp
 )
 
 target_include_directories(core
