rename Measurements class

--- a/slam3d/core/CMakeLists.txt
+++ b/slam3d/core/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(core SHARED
 	ScanSensor.cpp
 	Types.cpp
 	MeasurementSerialization.cpp
-	Measurements.cpp
+	MeasurementStorage.cpp
 )
 
 target_include_directories(core
