allow openmp parallel cloud transforms when creating maps

--- a/slam3d/sensor/pcl/CMakeLists.txt
+++ b/slam3d/sensor/pcl/CMakeLists.txt
@@ -12,6 +12,8 @@ target_include_directories(sensor-pcl
 if(TARGET pclomp::registration)
 	set(SLAM3D_REGISTRATION pclomp::registration)
 	target_compile_definitions(sensor-pcl PRIVATE USE_PCLOMP)
+	# also use openmp for slam3d
+	target_compile_options(sensor-pcl PRIVATE -fopenmp)
 else()
 	set(SLAM3D_REGISTRATION ${PCL_REGISTRATION_LIBRARIES})
 endif()
