--- a/slam3d/graph/neo4j/slam3d_graph_neo4j.pc.in
+++ b/slam3d/graph/neo4j/slam3d_graph_neo4j.pc.in
@@ -6,6 +6,6 @@ includedir=${prefix}/include
 Name: slam3d_graph_neo4j
 Description: Graph representation using the neo4j graph database.
 Version: @SLAM3D_VERSION@
-Requires: slam3d_core
+Requires: slam3d_core neo4j-client
 Libs: -L${libdir} -lslam3d_graph_neo4j -lcpprest
 Cflags: -I${includedir}
