completely move to bolt (libneo4j-client)

--- a/slam3d/graph/CMakeLists.txt
+++ b/slam3d/graph/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_subdirectory(boost)
 
-find_package(cpprestsdk)
-if (${cpprestsdk_FOUND})
+
+pkg_check_modules(neo4j IMPORTED_TARGET neo4j-client)
+if (neo4j_FOUND AND jsoncpp_FOUND) 
     add_subdirectory(neo4j)
 endif()
 
