move databases to other repo

--- a/slam3d/graph/CMakeLists.txt
+++ b/slam3d/graph/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_subdirectory(boost)
 
 
-pkg_check_modules(neo4j IMPORTED_TARGET neo4j-client)
-if (neo4j_FOUND AND jsoncpp_FOUND) 
-    add_subdirectory(neo4j)
-endif()
+# pkg_check_modules(neo4j IMPORTED_TARGET neo4j-client)
+# if (neo4j_FOUND AND jsoncpp_FOUND) 
+#     add_subdirectory(neo4j)
+# endif()
 
 
