Use pointmatcher master.

--- a/slam3d/sensor/pointmatcher/CMakeLists.txt
+++ b/slam3d/sensor/pointmatcher/CMakeLists.txt
@@ -6,12 +6,13 @@ target_include_directories(sensor-pointmatcher
 	PUBLIC
 		$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
 		$<INSTALL_INTERFACE:include>
+		${libpointmatcher_INCLUDE_DIRS}
 )
 
 target_link_libraries(sensor-pointmatcher
 	PUBLIC
 		core
-		libpointmatcher::libpointmatcher
+		${libpointmatcher_LIBRARIES}
 )
 
 # Install header files
