Started implementing constrained ICP. So far just a copy of PCL's GICP.

--- a/slam3d/sensor/pcl/CMakeLists.txt
+++ b/slam3d/sensor/pcl/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(sensor-pcl SHARED
 	PointCloudSensor.cpp
+	ConstrainedGICP.cpp
 )
 
 target_include_directories(sensor-pcl
@@ -31,6 +32,7 @@ target_link_libraries(sensor-pcl
 install(
 	FILES
 		PointCloudSensor.hpp
+		ConstrainedGICP.hpp
 		RegistrationParameters.hpp
 	DESTINATION include/slam3d/sensor/pcl
 )
