Added own implementation for pose prior.

--- a/slam3d/solver/g2o/CMakeLists.txt
+++ b/slam3d/solver/g2o/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(solver-g2o SHARED
 	edge_direction_prior.cpp
 	edge_position_prior.cpp
 	edge_orientation_prior.cpp
+	edge_pose_prior.cpp
 	G2oSolver.cpp
 )
 
