--- a/slam3d.project
+++ b/slam3d.project
@@ -52,6 +52,8 @@
     <VirtualDirectory Name="solver">
       <File Name="slam3d/solver/CMakeLists.txt"/>
       <VirtualDirectory Name="g2o">
+        <File Name="slam3d/solver/g2o/edge_pose_prior.h"/>
+        <File Name="slam3d/solver/g2o/edge_pose_prior.cpp"/>
         <File Name="slam3d/solver/g2o/edge_orientation_prior.cpp"/>
         <File Name="slam3d/solver/g2o/edge_orientation_prior.h"/>
         <File Name="slam3d/solver/g2o/CMakeLists.txt"/>
